--- a/store.html
+++ b/store.html
@@ -491,7 +491,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/5LayerFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -682,7 +682,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/SuperStrongWaterproofAdhesiveTape/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -865,7 +865,7 @@
                                 <a
                                     href="./360DegreeSwivelFaucet.html"
                                     class="text-gray-600 transition-colors duration-300 hover:text-blue-500 hover:underline"
-                                    >360 Degree Swivel Faucet</a
+                                    >Filtre de robinet rotatif à 360 degrés extensible et efficace</a
                                 >
                                 <a
                                     href="./TanklessInstantElectricWaterHeaterFaucet.html"
@@ -1381,7 +1381,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/5LayerFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -1583,7 +1583,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/SuperStrongWaterproofAdhesiveTape/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -2103,7 +2103,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/SwivelFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -2298,7 +2298,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/5LayerFaucet/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
@@ -2493,7 +2493,7 @@
                             >
                                 <div>
                                     <img
-                                        alt="360 Degree Swivel Faucet"
+                                        alt="Filtre de robinet rotatif à 360 degrés extensible et efficace"
                                         src="./assets/SuperStrongWaterproofAdhesiveTape/1.jpg"
                                         tabindex="0"
                                         class="focus:outline-none w-full h-52"
